<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>navigation</name>
  <version>0.1.0</version>
  <description>Provides collision free path-planning</description>
  <maintainer email="petr.stibinger@fly4future.com">stibipet</maintainer>
  <maintainer email="matous.vrba@fly4future.com">Matouš Vrba</maintainer>

  <license>BSD 3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>launch_ros</depend>

  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>px4_msgs</depend>
  <depend>fog_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>octomap</depend>
  <depend>octomap_msgs</depend>
  <depend>dynamicEDT3D</depend>
  <depend>fog_lib</depend>
  <depend>control_interface</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
